// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Renders "Hello octocat!" for emulated NextJS lifecycle 1`] = `
<div>
  Hello, 
  !
</div>
`;

exports[`Snapshot Testing Renders "Hello octocat!" for given props 1`] = `
<div>
  Hello, 
  octocat
  !
</div>
`;
